syntax = "proto3";

package grpc;
option go_package = "example.com/grpc;grpc";


service RicartArgwalaService {

     // Called when a node wants to request access to the critical section.
  rpc RequestAccess (RequestMessage) returns (Ack) {}

  // Called when a node replies to a request (grants permission).
  rpc ReplyAccess (ReplyMessage) returns (Ack) {}

}


message RequestMessage {
  int32 node_id = 1;
  int64 lamportTimestamp = 2;
  string from_addr = 3;
}

message ReplyMessage {
  int32 node_id = 1;
  int64 lamportTimestamp = 2;
  string from_addr = 3;
}

message Ack {
  bool success = 1;
}

